--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,22 @@
 menu:
-    Blog: /
+    Blog: https://mikecoder.cn
+    OJ Games: /
     Archive: /archives/
-    Weibo: http://weibo.com/sunchongsheng
-    GitHub: https://github.com/pinggod
+    GitHub: https://github.com/MikeCoder
+    Stackoverflow: https://stackoverflow.com/users/2907140/mike-tang
     Rss: /atom.xml
 
-favicon: /favicon.png
-logo: /favicon.png
+favicon: /favicon.ico
+logo: https://avatars1.githubusercontent.com/u/3142935?v=3&s=466
 
 # Comment
 # e.g disqus: seansun
 disqus:
-duoshuo:
+duoshuo: mikecoder-oj
 
 # Analytics
 # google-analytics:
-ga: UA-65933410-1
+# ga: UA-65933410-1
 
 # Copyright Infomation
-startyear: 2015
+startyear: 2017
