--- a/_config.yml.example
+++ b/_config.yml.example
@@ -12,6 +12,7 @@ logo: https://avatars1.githubusercontent.com/u/3142935?v=3&s=466 or file
 # e.g disqus: seansun
 disqus:
 duoshuo:
+livere:
 
 # Analytics
 # google-analytics:
