change the default font.

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.2",
     "gulp-sass": "^2.0.4"
+  },
+  "dependencies": {
+    "node-sass": "^4.8.3"
   }
 }
